<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
	<!-- 
        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/white" />
             -->

        <LinearLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/green_back_small"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp" >
 
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="@string/successCheck"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/green_white" />

            <TextView
                android:id="@+id/buildNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hash"
                android:textColor="@color/white"
                android:textSize="65dp" />
        </LinearLayout>
<!-- 
        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/white" />
 -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/triggerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="@string/trigger"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trigger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/triggerTitle"
                android:paddingTop="3dp"
                android:text="@string/trigger"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/revisionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="@string/revision"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/revision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/revisionTitle"
                android:paddingTop="3dp"
                android:text="@string/revision"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/completedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="@string/complete"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/completedTitle"
                android:paddingTop="3dp"
                android:text="@string/complete"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/durationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="@string/duration"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/durationTitle"
                android:paddingTop="3dp"
                android:text="@string/duration"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/successSinceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="@string/successSince"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/successSince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/successSinceTitle"
                android:paddingTop="3dp"
                android:text="@string/successSince"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/artTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="@string/artifact_name"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/artifact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/artTitle"
                android:paddingTop="3dp"
                android:text="@string/artifact"
                android:textSize="15dp" />
        </RelativeLayout>

    </LinearLayout>

    <!--<ImageView
        android:id="@+id/feedback"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:src="@drawable/bug_small" />-->

</RelativeLayout>